--- a/front/src/pages/Cadastro.css
+++ b/front/src/pages/Cadastro.css
@@ -1,10 +1,10 @@
 /* Cadastro.css */
-* {
+/* * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-}
+} */
 
 body {
   background-color: #fff;
