--- a/front/src/pages/Equipamentos.css
+++ b/front/src/pages/Equipamentos.css
@@ -1,10 +1,10 @@
 /* Reset básico */
-        * {
+/*         * {
           margin: 0;
           padding: 0;
           box-sizing: border-box;
         }
-
+ */
         body {
           background-color: #f3f4f6;
           font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
